--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am currently working as an electrician</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I'm from Jessup MD</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I play rugby and go mtn biking on occasion</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is to a full stack web developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Belleview FL</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to become a web developer because ive always been fasinated with how web development works. It allows you to be creative and problem solve.</p>
     </section>
 
     <footer id="footer">
